# task-management-api

./: alembic.ini  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.backup/: Dockerfile  docker-compose.yml
alembic/: env.py
alembic/versions/: a1e252734537_add_all_tables.py
src/app/: __init__.py  exceptions.py  main.py
src/app/api/: router.py
src/app/api/v1/: api.py  auth.py  roles.py  tasks.py  user_roles.py  users.py
src/app/core/: admin.py  config.py  deps.py  security.py
src/app/crud/: role.py  task.py  user.py  user_role.py
src/app/db/sql/: assign_roles_to_users.sql  pg_backup.sql  postgres_todos_db.sql  sample_insert_data_roles_table.sql  sample_insert_data_tasks_table.sql  sample_insert_data_users_table.sql  users_roles_table.sql
src/app/models/: __init__.py  role.py  task.py  user.py  user_role.py
src/app/schemas/: role.py  task.py  user.py  user_role.py
tests/: conftest.py  test_auth_service.py  test_todos_service.py  test_users_service.py
